--- a/overview/architecture-concepts/core-concepts-terminology.mdx
+++ b/overview/architecture-concepts/core-concepts-terminology.mdx
@@ -1,158 +1,180 @@
 ---
-title: "Fundamental Concepts & Terminology"
-description: "Acquire foundational knowledge of GoogleTest’s terminology—tests, test fixtures, assertions, matchers, mocks, cardinalities—and how each concept relates to real C++ testing workflows. Essential reading for building shared understanding in your team."
+title: "Core Concepts and Terminology"
+description: "Discover the key ideas powering GoogleTest: test cases, fixtures, assertions, parameterized testing, and the role of mocks. Learn critical terms that frame every testing workflow in this framework."
 ---
 
-# Fundamental Concepts & Terminology
+# Core Concepts and Terminology
 
-Acquiring a deep understanding of the foundational concepts and terminology used in GoogleTest, particularly within its GoogleMock (gMock) framework, is essential for effective C++ testing workflows. This page serves as an indispensable resource for teams aiming to build a shared language and to streamline collaboration around testing practices.
+Welcome to an essential overview of the foundational ideas that power GoogleTest. This page introduces you to the core concepts and terminology that frame everything you do when writing tests, organizing test cases, managing fixtures, making assertions, running parameterized tests, and working with mocks.
 
----
-
-## Why Understanding These Concepts Matters
-
-Testing C++ code with GoogleMock is more than just writing mock classes and expectations. It demands a clear grasp of several key concepts – including what defines a **test**, how **test fixtures** organize test code, the role of **assertions** and **matchers** in validating behavior, and the use of **mocks** to simulate dependencies.
-
-Each of these elements fits into the bigger picture of an effective testing workflow, enabling more maintainable, reliable, and expressive tests.
+Understanding these concepts is the key to effectively leveraging GoogleTest to write clean, maintainable, and powerful C++ tests.
 
 ---
 
-## Core Terminology and Concepts
+## Why Core Concepts Matter
 
-### Tests
-- The basic unit of verification, a **test** exercises a piece of code under controlled conditions and verifies its behavior using assertions.
-- Tests can be grouped logically using **test fixtures** for setup and teardown, enabling reuse and cleaner tests.
+Before diving into actual test writing, grasping the core testing concepts helps you align your intent with GoogleTest's design. It transforms the testing process into a workflow where you clearly specify:
 
-### Test Fixtures
-- A **test fixture** is a class that prepares the environment for a set of related tests, providing shared setup, cleanup, and utilities.
-- This promotes DRY (Don't Repeat Yourself) principles, ensuring consistent and maintainable test organization.
+- What you want to test (test cases and fixtures)
+- How to verify results (assertions)
+- How to run tests for different data sets (parameterized testing)
+- How to isolate components and track behavior (mocking)
 
-### Assertions
-- **Assertions** are statements within tests that validate expected outcomes.
-- GoogleTest offers rich assertion macros, such as `EXPECT_EQ` or `ASSERT_TRUE`, to confirm values or program state.
-
-### Matchers
-- **Matchers** generalize the concept of assertions by providing expressive predicates to match arguments in mocks.
-- GoogleMock includes combinable matchers like `Eq()`, `Ge()` (greater or equal), `_` (wildcard), as well as facilities to define custom matchers.
-- They enable precise control over the values and properties of mock method call arguments.
-
-### Mocks
-- **Mocks** are simulated versions of real objects created using `MOCK_METHOD` macros, allowing control over method behavior and expectations on how methods are called.
-- They provide behavior-driven interfaces to verify interactions in the code under test.
-- Mock objects enable setting expectations with `EXPECT_CALL`, defining how mock methods should behave.
-
-### Cardinalities
-- **Cardinalities** specify how many times a mock method is expected to be called.
-- Common examples include `Times(AnyNumber())`, `Times(Exactly(n))`, and `Times(AtLeast(n))`.
-- They help enforce correct call counts and interaction patterns in the code.
+Knowing the terminology also opens the door to advanced testing techniques and deeper understanding of test results.
 
 ---
 
-## How These Concepts Fit into Testing Workflows
+## 1. Test Cases and Test Fixtures
 
-A typical test workflow in GoogleMock involves:
+### What Is a Test Case?
+A test case is a grouping mechanism for logically related tests. Think of it as a collection of scenarios verifying a specific component or functionality.
 
-1. **Define Interfaces and Mock Classes:**
-   - Design your interfaces with virtual functions.
-   - Create mock classes using `MOCK_METHOD` macros for virtual methods.
+### What Is a Test Fixture?
+A test fixture is the common environment you create for multiple tests within a test case. It can initialize shared data, allocate resources, and clean up afterward. This ensures each test runs under known, consistent conditions.
 
-2. **Set Up Test Fixtures:**
-   - Group related tests using fixtures that manage shared test state.
-
-3. **Specify Expectations and Behavior:**
-   - Use `EXPECT_CALL` to define what mock methods are expected to be called, with which arguments, how many times, and what they should return.
-   - Use matchers to express argument constraints precisely.
-
-4. **Exercise Code Under Test:**
-   - Run your production code using the mocks.
-   - Tests automatically verify expectations as they run.
-
-5. **Review Test Outcomes:**
-   - GoogleMock reports failures immediately upon unmet expectations.
-
----
-
-## Key Relationships and Best Practices
-
-- Always mock interfaces or virtual methods to avoid unwanted side effects and dependencies.
-- Use matchers effectively to avoid overspecification that leads to brittle tests.
-- Control cardinalities thoughtfully to balance between ensuring correctness and test maintainability.
-- Use `NiceMock` or `StrictMock` wrappers to manage warnings or strictness levels for uninteresting calls.
-- Organize tests using fixtures to share setup and promote clarity.
-
----
-
-## Concrete Example: Defining Mocks and Expectations
-
-Here’s how you mock a simple class and specify expectations using GoogleMock:
-
+### Example: Simple Test Fixture
 ```cpp
-#include <gmock/gmock.h>
-
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
+class MyTestFixture : public ::testing::Test {
+ protected:
+  void SetUp() override {
+    // Initialize data
+  }
+  void TearDown() override {
+    // Cleanup
+  }
+  int shared_value_ = 42;
 };
 
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
+TEST_F(MyTestFixture, TestA) {
+  EXPECT_EQ(shared_value_, 42);
+}
 
-// Test example
-TEST(DrawTest, DrawsCircle) {
-  MockTurtle turtle;
-
-  // Expect PenDown to be called once
-  EXPECT_CALL(turtle, PenDown()).Times(1);
-  // Allow any call to Forward with distance >= 0
-  EXPECT_CALL(turtle, Forward(testing::Ge(0)))
-      .Times(testing::AtLeast(1));
-
-  // Your painter code using turtle goes here
-  // ...
+TEST_F(MyTestFixture, TestB) {
+  shared_value_++;
+  EXPECT_EQ(shared_value_, 43);
 }
 ```
 
----
-
-## Special Terminology Clarifications
-
-- **Uninteresting Calls:** Calls to mock methods not specified by `EXPECT_CALL`.
-  *Warnings* are printed by default. Use `NiceMock` to suppress them or `StrictMock` to treat them as errors.
-
-- **Expectations vs Default Actions:** Use `EXPECT_CALL` for calls *you want to verify*; use `ON_CALL` to specify *default behavior* without asserting that a call must occur.
-
-- **Delegating Calls:** Mocks can delegate their default behavior to a fake or real object to combine behavior fidelity with test verification.
-
-- **Mocking Non-Virtual Methods:** Possible via templates, but recommended to mock virtual methods for better test design.
+Here, `MyTestFixture` prepares the context for tests `TestA` and `TestB`. Each test starts with the fixture’s `SetUp` run, followed by the test body, then `TearDown`.
 
 ---
 
-## Troubleshooting and Common Pitfalls
+## 2. Assertions
 
-- Ensure all virtual methods are mocked publicly even if base methods are private or protected.
-- Wrap return or argument types containing commas in parentheses or use typedefs to avoid macro parsing errors.
-- Use sequences (`InSequence`) to enforce call order when that is critical.
-- Avoid overspecifying. Too many `EXPECT_CALL` constraints can make tests brittle.
-- When mocking overloaded methods, mock every overload to avoid compiler warnings, or use `using` to bring base methods into scope.
-- Use `RetiresOnSaturation` to make expectations non-sticky and avoid test failures due to upper bound violation.
-- Use GoogleMock's verbose mode (`--gmock_verbose=info`) to debug why certain calls are or are not matching expectations.
+Assertions verify that expected conditions hold true. GoogleTest provides a rich suite of assertion macros:
+
+- `EXPECT_*`: Continue test on failure (non-fatal)
+- `ASSERT_*`: Abort current test on failure (fatal)
+
+### Examples:
+```cpp
+EXPECT_EQ(value1, value2);  // Checks equality; test continues if fails
+ASSERT_TRUE(ptr != nullptr);  // Aborts on failure
+```
+
+GoogleTest also supports detailed assertions, custom messages, and predicate assertions for expressive validation.
+
+---
+
+## 3. Parameterized Testing
+
+Sometimes you want to test the same behavior for multiple inputs without duplicating code.
+
+GoogleTest supports parameterized tests that run the same test logic with different input values.
+
+### Example: Value-Parameterized Test
+```cpp
+class MyParamTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(MyParamTest, IsEven) {
+  int n = GetParam();
+  EXPECT_EQ(n % 2, 0);
+}
+
+INSTANTIATE_TEST_SUITE_P(EvenNumbers, MyParamTest, ::testing::Values(2, 4, 6, 8));
+```
+
+Each instantiation runs the `IsEven` test with values 2, 4, 6, and 8.
+
+---
+
+## 4. The Role of Mocks
+
+Mock objects are *test doubles* that look and behave like real objects but record how they are used.
+
+GoogleMock, included with GoogleTest, allows you to define mocks, set expectations on their methods (calls, arguments, order), and verify them automatically.
+
+### Why Use Mocks?
+
+- Isolate the unit of work by replacing dependencies
+- Simulate various behaviors including failures
+- Verify that interaction protocols are observed
+
+### Example: Defining a Mock
+```cpp
+class Foo {
+ public:
+  virtual ~Foo() {}
+  virtual int GetSize() const = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+};
+
+TEST(MyTest, UsesMock) {
+  MockFoo foo;
+  EXPECT_CALL(foo, GetSize()).WillOnce(Return(10));
+  EXPECT_EQ(foo.GetSize(), 10);
+}
+```
+
+Mocks enable interaction-based testing where you verify *how* code is used rather than just validating the end result.
+
+---
+
+## Summary of Key Terminology
+
+| Term            | Definition                                                        |
+|-----------------|-------------------------------------------------------------------|
+| Test Case       | A suite grouping multiple related tests                           |
+| Test Fixture    | Setup and teardown common environment for tests                   |
+| Test            | An individual scenario verifying expected behavior               |
+| Assertion       | A statement verifying expected conditions during a test           |
+| Parameterized Test | A test that runs multiple times with different input parameters |
+| Mocks           | Test doubles that replace real objects to verify interaction     |
+
+---
+
+## Best Practices
+
+- Structure tests with clear fixtures to avoid duplication.
+- Use assertions to target specific verification points.
+- Leverage parameterized tests to reduce redundant code.
+- Use mocks prudently to focus tests on units, not on external dependencies.
 
 ---
 
 ## Next Steps
 
-You now have the shared vocabulary to approach GoogleMock testing with confidence. To deepen your mastery:
+Start applying these core concepts by writing simple test cases using `TEST` and `TEST_F` macros. Dive deeper into:
 
-- Proceed to the [gMock Cookbook](/docs/gmock_cook_book.md) for practical recipes.
-- Review the [Mocking Cheat Sheet](/docs/gmock_cheat_sheet.md) for quick reference.
-- Explore the [Mocking API Reference](/api-reference/mocking-apis/mock-object-definition) for details on APIs like `EXPECT_CALL` and `MOCK_METHOD`.
-- Consult the [Mocking FAQ](/docs/gmock_faq.md) for solutions to common challenges.
+- [Writing and Running Tests](https://google.github.io/googletest/gmock_for_dummies.html)
+- [Using GoogleMock for Mocks](../guides/mocking-and-mocking-patterns/mocking-basics.md)
+- [Parameterized Tests](../guides/parameterized-and-advanced-testing/value-param-tests.md)
 
-Harness these foundational concepts, and your team will write clearer, more effective C++ tests using GoogleMock with ease.
+Explore how these concepts unify to provide a robust and maintainable C++ testing workflow.
+
+---
+
+# Additional Resources
+
+- [GoogleTest User's Guide](https://google.github.io/googletest/)
+- [Mocking with GoogleMock Cookbook](../docs/gmock_cook_book.md)
+- [GoogleTest Primer](../docs/primer.md)
+
+
+---
+
+*Harness the power of C++ testing by mastering these core concepts—this foundation equips you to design reliable, maintainable tests with GoogleTest and GoogleMock.*
