--- a/overview/architecture-concepts/architecture-overview.mdx
+++ b/overview/architecture-concepts/architecture-overview.mdx
@@ -1,154 +1,132 @@
 ---
-title: "Architecture Overview"
-description: "A visual and narrative exploration of GoogleTest’s modular design, showing the flow from test definition to execution. Includes a mermaid diagram depicting core components—test cases, assertions, runners, and result reporting—to help users quickly grasp the system’s structure."
+title: "Framework Architecture"
+description: "Dive into a visual and narrative overview of GoogleTest's system architecture. See how test discovery, execution, and assertions flow through the main components—and how GoogleMock integrates to add mocking capabilities."
 ---
 
-# Architecture Overview
+# Framework Architecture
 
-GoogleTest is designed around a modular and extensible architecture that enables efficient definition, discovery, execution, and reporting of C++ tests. This page presents a visual and narrative exploration of its core architectural components, providing users with a clear mental model of the testing flow—from writing test cases to viewing results.
-
----
-
-## Understanding GoogleTest Architecture
-
-At its core, GoogleTest organizes tests in a hierarchical manner and facilitates streamlined test execution and results reporting. It leverages components such as test cases, test runners, assertions, and report generators to deliver a comprehensive testing experience.
-
-### Core Components Explained
-
-- **Test Cases**: Encapsulate a collection of related tests, usually grouped by functionality or feature.
-- **Test Definitions**: The individual test functions written by users which exercise specific functionality.
-- **Assertions**: The core elements within tests that validate expected behaviors and outcomes.
-- **Test Runners**: Orchestrate discovery and execution of tests based on user commands or configurations.
-- **Result Reporting**: Collects and formats the outcomes of executed tests to provide users with clear diagnostics.
-
-By understanding how these pieces interact, users can grasp how GoogleTest executes their tests and why it produces the outputs they see.
-
-### Why This Matters to You
-
-Knowing GoogleTest's architecture helps you:
-
-- Quickly diagnose why tests behave a certain way.
-- Design your tests to integrate smoothly with the framework.
-- Interpret test results effectively.
-- Build upon or extend the framework with confidence.
+Dive into a visual and narrative overview of GoogleTest's system architecture. This page explains how test discovery, execution, and assertions are managed in GoogleTest, and how GoogleMock seamlessly integrates to provide powerful mocking capabilities for C++ testing.
 
 ---
 
-## Visualizing the Architecture
+## Understanding GoogleTest's System Architecture
 
-The following diagram illustrates the flow from test definition through execution and reporting, highlighting critical components and their interactions.
+GoogleTest provides a robust, modular framework designed to streamline C++ testing. This architecture manages discovering tests in your codebase, executing them efficiently, and reporting their results accurately. It also offers a seamless integration point for GoogleMock to extend the framework with mocking capabilities.
+
+At the heart of GoogleTest's design are the components responsible for:
+
+- **Test Discovery:** Automatically detecting tests declared across files and modules.
+- **Test Execution:** Running tests, managing lifecycle events, and handling setup/teardown.
+- **Assertions and Reporting:** Capturing test outcomes, including success, failures, and detailed diagnostics.
+
+
+## Core Components and Their Flow
+
+The typical flow begins with the test runner launching the test executable. GoogleTest then:
+
+1. **Discovers Registered Tests:** Using static registration, tests declared with `TEST()` and `TEST_F()` macros are collected during program startup.
+2. **Executes Tests Sequentially:** The framework invokes each test, wrapping it with fixture setup and teardown if specified.
+3. **Performs Assertions:** Assertions within tests evaluate conditions, and failures trigger detailed reports without stopping test execution.
+4. **Aggregates Results:** Outcome summaries are presented for all tests run, helping users quickly identify issues.
+
+This flow creates a consistent and efficient mechanism to validate C++ code correctness.
+
+## How GoogleMock Integrates
+
+GoogleMock extends GoogleTest to provide:
+
+- Mock objects for interfaces and classes
+- Expectation setting and verification
+- Rich matchers and actions for fine-grained control
+
+Behind the scenes, GoogleMock plugs into GoogleTest's execution cycle to intercept mocked method calls, verify interactions, and add mock-specific reports alongside normal test results.
+
+The integration is designed such that users can write test cases mixing GoogleTest assertions with GoogleMock expectations naturally.
+
+## Visual Overview of Component Interaction
 
 ```mermaid
 flowchart TD
-  TDef["Test Definition"] -->|Grouped Into| TCase["Test Case"]
-  TCase -->|Managed By| TRunner["Test Runner"]
-  TRunner -->|Executes| Assertion["Assertions"]
-  Assertion -->|Capture Result| Result["Result Reporting"]
-  Result --> User["User / Test Feedback"]
 
-  subgraph "Execution Flow"
-    TRunner --> Exec[Test Execution]
-    Exec --> Assertion
+  Runner["Test Runner"] --> Discovery["Test Discovery"]
+  Discovery -->|registers| Tests["Test Definitions & Fixtures"]
+  Tests --> Execution["Test Execution Engine"]
+  Execution --> Assertions["Assertions & Verification"]
+  Assertions --> Reporting["Result Aggregation & Reporting"]
+  Reporting --> Runner
+
+  subgraph "Mocking Integration"
+    Execution --> MockCalls["Mock Method Calls"]
+    MockCalls --> Verification["Expectation Verification"]
+    Verification --> Assertions
   end
 
-  subgraph "Reporting Flow"
-    Result --> Formatter["Result Formatter"]
-    Formatter --> Output["Console / File Output"]
-  end
-
-  classDef component fill:#f9f,stroke:#333,stroke-width:2px;
-  class TDef,TCase,TRunner,Assertion,Result,Exec,Formatter,Output component;
+  %% Styling
+  classDef keycomponent fill:#f9f,stroke:#333,stroke-width:2px;
+  class Discovery,Execution,Assertions,Reporting,MockCalls,Verification keycomponent;
 ```
 
----
 
-## From Test Definition to User Feedback: Step-by-Step
+## Component Details
 
-1. **Write Test Definitions**: You author specific tests which include assertions to confirm expected behavior.
+### Test Discovery
 
-2. **Organize into Test Cases**: Related tests are grouped logically to enable modular execution.
+- **Purpose:** Automatically identify all tests in the executable.
+- **Mechanism:** During static initialization, test macros create descriptors registered in a global registry.
+- **Benefit:** No manual test listing needed; new tests are picked up automatically.
 
-3. **Initiate Test Runner**: GoogleTest's runner discovers all defined test cases and prepares them for execution.
+### Test Execution
 
-4. **Execute Tests**: The runner runs each test in sequence or as configured, evaluating all assertions.
+- **Purpose:** Runs individual tests, wrapping fixture setup and teardown.
+- **Features:** Supports parameterized tests, death tests, and typed tests.
+- **Benefit:** Provides a controlled and isolated environment for each test ensuring clean state.
 
-5. **Capture Results**: Each assertion's pass/fail state is recorded.
+### Assertions and Verification
 
-6. **Format and Report Results**: Summaries and detailed diagnostics are presented to you, facilitating rapid debugging.
+- **Purpose:** Evaluate conditions and verify expectations (including from GoogleMock).
+- **Mechanism:** Records failure info, including source location and messages, without terminating full test runs.
+- **Benefit:** Enables detailed diagnostics while continuing test suite execution.
 
----
+### Reporting
 
-## Practical Tips to Leverage GoogleTest Architecture
+- **Purpose:** Summarizes, outputs, and, if needed, formats test results for various consumers.
+- **Customization:** Support for XML output and integration with continuous integration systems.
 
-- **Group Related Tests Using Test Cases**: This helps manage large test suites and improves run-time filtering.
+### Mocking with GoogleMock
 
-- **Use the Test Runner Options**: Customize which tests run and how output is reported (e.g., filtering, XML output).
+- **Mock Object Registry:** Tracks all mock objects and their associated methods.
+- **Call Interception:** When a mock method is called, GoogleMock intercepts it to check expectations.
+- **Thread Safety:** Internal global mutex protects state, enabling multithreaded test execution.
 
-- **Leverage Assertions for Clear Diagnostics**: Use GoogleTest's rich assertion macros to generate detailed failure messages helping you pinpoint issues.
+## Why This Architecture Matters
 
-- **Understand Test Execution Ordering**: Some features rely on predictable ordering.
+GoogleTest's architecture balances automated test management with flexibility and extensibility. Users benefit from:
 
-- **Consult Architecture When Extending**: If integrating GoogleTest into custom environments or tooling, understanding these components facilitates smoother integration.
+- **Easy Test Integration:** Thanks to automatic discovery.
+- **Robust Verification:** Clear separation between execution and verification
+- **Extensibility:** Through GoogleMock and other add-ons without complexity.
 
----
+Consequently, users can scale testing from simple to complex scenarios fluidly.
 
-## Common Pitfalls and How to Avoid Them
+## Tips for Navigating This Architecture
 
-- **Misplaced Test Cases**: Avoid scattering tests arbitrarily; group meaningfully for clearer test scopes.
+- **Use the macros (`TEST`, `TEST_F`) as intended; your tests become auto-registered.**
+- **Leverage GoogleMock's capabilities for dependency isolation by defining mocks in your tests.**
+- **Understand test lifecycle: fixtures setup before running each test, teardown after.**
+- **If you encounter issues, use verbose flags (`--gmock_verbose`) to trace execution flow and mock behavior.**
 
-- **Ignoring Test Runner Capabilities**: Using filters and runner flags can prevent slow or irrelevant test execution.
+## Next Steps
 
-- **Overlooking Detailed Reports**: Utilize verbose modes and XML output for deeper insight when tests fail.
-
-- **Assuming Internal Implementation Details**: Focus on the user-oriented flow and results. Internal changes may happen without affecting the overall test experience.
-
----
-
-## Getting Started with This Architecture
-
-To put this understanding into practice:
-
-<Steps>
-<Step title="Write Your First Test">
-Start by writing a simple test within a test case using GoogleTest's macros.
-</Step>
-
-<Step title="Run Tests Using the Test Runner">
-Use `RUN_ALL_TESTS()` or command line filters to control test execution.
-</Step>
-
-<Step title="Interpret Results">
-Analyze console output or XML reports to understand test outcomes.
-</Step>
-
-<Step title="Explore Further">
-Dive deeper into guides on writing assertions, test fixtures, and parameterized tests to expand your mastery.
-</Step>
-</Steps>
-
----
-
-## Additional Resources
-
-For a broader understanding of GoogleTest and how this architecture fits:
-
-- [What is GoogleTest?](../../product-intro-value/what-is-googletest)
-- [Core Features at a Glance](../../product-intro-value/core-features-at-a-glance)
-- [Target Audience & Use Cases](../../product-intro-value/target-audience-and-use-cases)
-
-These will provide context and practical examples complementing the architecture overview presented here.
-
----
-
-## Summary
-
-GoogleTest’s modular architecture, visualized and explained here, guides how test cases, runners, assertions, and reports work together to deliver a powerful testing experience. This foundation lets you write effective tests, understand their execution, and extend your testing strategy with confidence.
+- Explore the [GoogleTest Overview](overview/product-intro/what-is-googletest) to understand the product’s scope.
+- Dive into [Writing Your First Test](getting-started/first-test/writing-basic-test) to see architecture in action.
+- Learn about the [Mocking Basics](guides/mocking-and-mocking-patterns/mocking-basics) to harness GoogleMock’s power.
 
 
 ---
 
-*This documentation page is part of the Architecture & Core Concepts section and connects foundational product introductions with practical test writing and execution insights.*
+<Info>
+This page focuses specifically on the overarching framework architecture behind GoogleTest, illustrating how major components interact. For more detailed information on mocking specifics and usage patterns, refer to the [gMock Cookbook](docs/gmock_cook_book.md) and [Mocking Reference](docs/reference/mocking.md).
+</Info>
 
-<Callout title="Note to Users">
-This page focuses solely on the architectural flow of GoogleTest tests from definition through execution to results reporting. For mock object details and mocking specifics, see the Mocking & Behavior Verification guides and API references.
-</Callout>
+<Source url="https://github.com/google/googletest" paths={[{"path": "googlemock/src/gmock-spec-builders.cc", "range": "1-420"}]} />
+
